pwrp-interface-orig/rt_net.h

struct net_sMessage {
	pwr_tBoolean xdr;
	pwr_tUInt32 msn;
	pwr_tNodeId nid;
};
typedef struct net_sMessage net_sMessage;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 count pwr_dPacked; /* # of removals */
 pwr_tSubid sid[1] pwr_dPacked; /* Subscription to remove */
} net_sSubRemove;
bool_t
xdr_net_sSubRemove();
/* Subscription data transfer.  */

typedef struct {
 pwr_tSubid sid pwr_dPacked; /* Tag */
 pwr_tStatus sts pwr_dPacked; /* Status */
 pwr_tUInt32 size pwr_dPacked; /* Size of data */
 char data[1]; /* Dynamic */
} net_sSubData;
bool_t xdr_net_sSubData();
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header when used as message */
 pwr_tUInt32 count pwr_dPacked; /* # of subdata entries in msg */
 net_sSubData subdata[1]; /* Dynamic */
} net_sSubMessage;
bool_t xdr_net_sSubMessage();
struct net_sSanEntry {
	pwr_tObjid oid;
	pwr_tSubid sid;
};
typedef struct net_sSanEntry net_sSanEntry;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tVolumeId vid pwr_dPacked;
 pwr_tUInt32 count pwr_dPacked; /* # of entries */
 net_sSanEntry sane[1] pwr_dPacked;
} net_sSanAdd;
bool_t xdr_net_sSanAdd();
typedef struct net_sSanRemove {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tVolumeId vid pwr_dPacked;
 pwr_tUInt32 count pwr_dPacked; /* # of removals */
 pwr_tSubid sid[1] pwr_dPacked; /* Subscriptions to remove (dynamic) */
} net_sSanRemove;
bool_t xdr_net_sSanRemove();
struct net_sAlarm {
	pwr_tUInt32 a;
	pwr_tUInt32 b;
	pwr_tUInt32 maxa;
	pwr_tUInt32 maxb;
	pwr_tUInt32 idx;
};
typedef struct net_sAlarm net_sAlarm;
struct net_sSanData {
	net_sSanEntry sane;
	net_sAlarm al;
};
typedef struct net_sSanData net_sSanData;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header when used as message */
 pwr_tUInt32 count pwr_dPacked; /* # of SUBDATA entries in msg */
 net_sSanData data[1] pwr_dPacked; /* Dynamic */
} net_sSanUpdate;
bool_t xdr_net_sSanUpdate();
/*  Cache inquiry, fetch by name.  */

typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tObjid poid pwr_dPacked; /* Parent of name */
 pwr_tBitMask trans pwr_dPacked; /* Translation mask.  */
 pwr_tUInt32 lcount pwr_dPacked; /* Number of left siblings wanted. */
 pwr_tUInt32 rcount pwr_dPacked; /* Number of lright siblings wanted. */
 pwr_tUInt32 len pwr_dPacked; /* name buffer length */
 char name[1]; /* name buffer */
} net_sNameToObject;
bool_t xdr_net_sNameToObject();
struct net_sOidToObject {
	net_sMessage hdr;
	pwr_tObjid oid;
	pwr_tBitMask trans;
	pwr_tUInt32 lcount;
	pwr_tUInt32 rcount;
};
typedef struct net_sOidToObject net_sOidToObject;
typedef union {
 pwr_tBitMask m;
 pwr_32Bits (
 pwr_Bits( isParent , 1),
 pwr_Bits( isAliasClient , 1),
 pwr_Bits( isAliasServer , 1),
 pwr_Bits( isMountClient , 1),
 pwr_Bits( inSibList , 1),
 pwr_Bits( hasSubClass , 1),
 pwr_Bits( fill0 , 2),,

 pwr_Bits( fill1 , 8),,,,,,,,
 pwr_Bits( fill2 , 8),,,,,,,,
 pwr_Bits( fill3 , 8),,,,,,,
 ) b;

#define net_mGo__ 0
#define net_mGo_isParent pwr_Bit(0)
#define net_mGo_isAliasClient pwr_Bit(1)
#define net_mGo_isAliasServer pwr_Bit(2)
#define net_mGo_isMountClient pwr_Bit(3)
#define net_mGo_inSibList pwr_Bit(4)
#define net_mGo_hasSubClass pwr_Bit(5)

#define net_mGo_isClient (net_mGo_isAliasClient|net_mGo_isMountClient)

#define net_mGo_ (~net_mGo__)
} net_mGo;
struct net_sOixLink {
	pwr_tObjectIx flink;
	pwr_tObjectIx blink;
};
typedef struct net_sOixLink net_sOixLink;
struct net_sGobject {
	pwr_tObjid oid;
	pwr_tClassId cid;
	cdh_sFamily f;
	net_sOixLink sib;
	pwr_tObjid soid;
	pwr_tUInt32 size;
	net_mGo flags;
};
typedef struct net_sGobject net_sGobject;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tStatus sts pwr_dPacked; /* Status code */
 pwr_tObjid oid pwr_dPacked; /* Objid of referenced object */
 pwr_tUInt32 count pwr_dPacked; /* # of headers in response */
 net_sGobject g[1] pwr_dPacked; /* Array of object headers */
} net_sObjectR;
bool_t xdr_net_sObjectR();
struct net_sGetObjectInfo {
	net_sMessage hdr;
	pwr_sAttrRef aref;
};
typedef struct net_sGetObjectInfo net_sGetObjectInfo;
typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_tUInt32 sts pwr_dPacked; /* Status code */
 pwr_sAttrRef aref pwr_dPacked; /* Copy of requested info */
 pwr_tUInt32 size pwr_dPacked; /* Size of requested data, same as aref.size, in bytes.  */
 char info[1]; /* Data requested.  */
} net_sGetObjectInfoR;
bool_t xdr_net_sGetObjectInfoR();
/* Set object information.  */

typedef struct {
 net_sMessage hdr pwr_dPacked; /* Header */
 pwr_sAttrRef aref pwr_dPacked; /* Data reference */
 pwr_tUInt32 size pwr_dPacked; /* Size of requested data, same as aref.size, in bytes.  */
 char info[1]; /* Data to write (size bytes) */
} net_sSetObjectInfo;
bool_t xdr_net_sSetObjectInfo();
struct net_sSetObjectInfoR {
	net_sMessage hdr;
	pwr_tUInt32 sts;
	pwr_sAttrRef aref;
};
typedef struct net_sSetObjectInfoR net_sSetObjectInfoR;
struct net_sSiblings {
	pwr_tObjectIx flink;
	pwr_tObjectIx newblink;
	pwr_tObjectIx blink;
	pwr_tObjectIx newflink;
};
typedef struct net_sSiblings net_sSiblings;
struct net_sParent {
	pwr_tObjid oid;
	pwr_tObjid soid;
};
typedef struct net_sParent net_sParent;
struct net_sNotify {
	net_sMessage hdr;
	pwr_tObjid oid;
};
typedef struct net_sNotify net_sNotify;