pwrp-interface-orig/rt_net_h.ads


  -- Remove subscription.   
  -- Header  
   type net_sSubRemove_sid_array is array (0 .. 0) of aliased pwr_h.pwr_tSubid;
   type net_sSubRemove is record
      hdr : aliased net_sMessage;  -- rt_net.h:272
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:273
      sid : aliased net_sSubRemove_sid_array;  -- rt_net.h:274
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSubRemove);  -- rt_net.h:275

   --  skipped anonymous struct anon_128

  -- # of removals  
  -- Subscription to remove  
   function xdr_net_sSubRemove return rpc_types_h.bool_t;  -- rt_net.h:278
   pragma Import (C, xdr_net_sSubRemove, "xdr_net_sSubRemove");

  -- Subscription data transfer.   
  -- Tag  
   subtype net_sSubData_data_array is Interfaces.C.char_array (0 .. 0);
   type net_sSubData is record
      sid : aliased pwr_h.pwr_tSubid;  -- rt_net.h:283
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:284
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:285
      data : aliased net_sSubData_data_array;  -- rt_net.h:286
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSubData);  -- rt_net.h:287

   --  skipped anonymous struct anon_129

  -- Status  
  -- Size of data  
  -- Dynamic  
   function xdr_net_sSubData return rpc_types_h.bool_t;  -- rt_net.h:288
   pragma Import (C, xdr_net_sSubData, "xdr_net_sSubData");

  -- Header when used as message  
   type net_sSubMessage_subdata_array is array (0 .. 0) of aliased net_sSubData;
   type net_sSubMessage is record
      hdr : aliased net_sMessage;  -- rt_net.h:293
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:294
      subdata : aliased net_sSubMessage_subdata_array;  -- rt_net.h:295
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSubMessage);  -- rt_net.h:296

   --  skipped anonymous struct anon_130

  -- # of subdata entries in msg  
  -- Dynamic  
   function xdr_net_sSubMessage return rpc_types_h.bool_t;  -- rt_net.h:298
   pragma Import (C, xdr_net_sSubMessage, "xdr_net_sSubMessage");

   type net_sSanEntry is record
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:302
      sid : aliased pwr_h.pwr_tSubid;  -- rt_net.h:303
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSanEntry);  -- rt_net.h:301

  -- Header  
   type net_sSanAdd_sane_array is array (0 .. 0) of aliased net_sSanEntry;
   type net_sSanAdd is record
      hdr : aliased net_sMessage;  -- rt_net.h:309
      vid : aliased pwr_h.pwr_tVolumeId;  -- rt_net.h:310
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:311
      sane : aliased net_sSanAdd_sane_array;  -- rt_net.h:312
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSanAdd);  -- rt_net.h:313

   --  skipped anonymous struct anon_131

  -- # of entries  
   function xdr_net_sSanAdd return rpc_types_h.bool_t;  -- rt_net.h:315
   pragma Import (C, xdr_net_sSanAdd, "xdr_net_sSanAdd");

  -- Header  
   type net_sSanRemove_sid_array is array (0 .. 0) of aliased pwr_h.pwr_tSubid;
   type net_sSanRemove is record
      hdr : aliased net_sMessage;  -- rt_net.h:320
      vid : aliased pwr_h.pwr_tVolumeId;  -- rt_net.h:321
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:322
      sid : aliased net_sSanRemove_sid_array;  -- rt_net.h:323
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSanRemove);  -- rt_net.h:319

  -- # of removals  
  -- Subscriptions to remove (dynamic)  
   function xdr_net_sSanRemove return rpc_types_h.bool_t;  -- rt_net.h:326
   pragma Import (C, xdr_net_sSanRemove, "xdr_net_sSanRemove");

   type net_sAlarm is record
      a : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:330
      b : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:331
      maxa : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:332
      maxb : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:333
      idx : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:334
   end record;
   pragma Convention (C_Pass_By_Copy, net_sAlarm);  -- rt_net.h:329

   type net_sSanData is record
      sane : aliased net_sSanEntry;  -- rt_net.h:339
      al : aliased net_sAlarm;  -- rt_net.h:340
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSanData);  -- rt_net.h:338

  -- Header when used as message  
   type net_sSanUpdate_data_array is array (0 .. 0) of aliased net_sSanData;
   type net_sSanUpdate is record
      hdr : aliased net_sMessage;  -- rt_net.h:346
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:347
      data : aliased net_sSanUpdate_data_array;  -- rt_net.h:348
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSanUpdate);  -- rt_net.h:349

   --  skipped anonymous struct anon_132

  -- # of SUBDATA entries in msg  
  -- Dynamic  
   function xdr_net_sSanUpdate return rpc_types_h.bool_t;  -- rt_net.h:351
   pragma Import (C, xdr_net_sSanUpdate, "xdr_net_sSanUpdate");

  --  Cache inquiry, fetch by name.   
  -- Header  
   subtype net_sNameToObject_name_array is Interfaces.C.char_array (0 .. 0);
   type net_sNameToObject is record
      hdr : aliased net_sMessage;  -- rt_net.h:355
      poid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:356
      trans : aliased pwr_h.pwr_tBitMask;  -- rt_net.h:357
      lcount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:358
      rcount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:359
      len : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:360
      name : aliased net_sNameToObject_name_array;  -- rt_net.h:361
   end record;
   pragma Convention (C_Pass_By_Copy, net_sNameToObject);  -- rt_net.h:362

   --  skipped anonymous struct anon_133

  -- Parent of name  
  -- Translation mask.   
  -- Number of left siblings wanted.  
  -- Number of lright siblings wanted.  
  -- name buffer length  
  -- name buffer  
   function xdr_net_sNameToObject return rpc_types_h.bool_t;  -- rt_net.h:364
   pragma Import (C, xdr_net_sNameToObject, "xdr_net_sNameToObject");

   type net_sOidToObject is record
      hdr : aliased net_sMessage;  -- rt_net.h:367
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:368
      trans : aliased pwr_h.pwr_tBitMask;  -- rt_net.h:369
      lcount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:370
      rcount : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:371
   end record;
   pragma Convention (C_Pass_By_Copy, net_sOidToObject);  -- rt_net.h:366

   type net_mGo;
   type anon_135 is record
      isParent : Extensions.Unsigned_1;  -- rt_net.h:376
      isAliasClient : Extensions.Unsigned_1;  -- rt_net.h:376
      isAliasServer : Extensions.Unsigned_1;  -- rt_net.h:376
      isMountClient : Extensions.Unsigned_1;  -- rt_net.h:376
      inSibList : Extensions.Unsigned_1;  -- rt_net.h:376
      hasSubClass : Extensions.Unsigned_1;  -- rt_net.h:376
      fill0 : Extensions.Unsigned_2;  -- rt_net.h:376
      fill1 : aliased unsigned_char;  -- rt_net.h:376
      fill2 : aliased unsigned_char;  -- rt_net.h:376
      fill3 : aliased unsigned_char;  -- rt_net.h:376
   end record;
   pragma Convention (C_Pass_By_Copy, anon_135);
   type net_mGo (discr : unsigned := 0) is record
      case discr is
         when 0 =>
            m : aliased pwr_h.pwr_tBitMask;  -- rt_net.h:375
         when others =>
            b : aliased anon_135;  -- rt_net.h:388
      end case;
   end record;
   pragma Convention (C_Pass_By_Copy, net_mGo);
   pragma Unchecked_Union (net_mGo);  -- rt_net.h:401

   --  skipped anonymous struct anon_134

   type net_sOixLink is record
      flink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:404
      blink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:405
   end record;
   pragma Convention (C_Pass_By_Copy, net_sOixLink);  -- rt_net.h:403

   type net_sGobject is record
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:410
      cid : aliased pwr_h.pwr_tClassId;  -- rt_net.h:411
      f : aliased co_cdh_h.cdh_sFamily;  -- rt_net.h:412
      sib : aliased net_sOixLink;  -- rt_net.h:413
      soid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:414
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:415
      flags : net_mGo;  -- rt_net.h:416
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGobject);  -- rt_net.h:409

  -- Header  
   type net_sObjectR_g_array is array (0 .. 0) of aliased net_sGobject;
   type net_sObjectR is record
      hdr : aliased net_sMessage;  -- rt_net.h:422
      sts : aliased pwr_h.pwr_tStatus;  -- rt_net.h:423
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:424
      count : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:425
      g : aliased net_sObjectR_g_array;  -- rt_net.h:426
   end record;
   pragma Convention (C_Pass_By_Copy, net_sObjectR);  -- rt_net.h:427

   --  skipped anonymous struct anon_136

  -- Status code  
  -- Objid of referenced object  
  -- # of headers in response  
  -- Array of object headers  
   function xdr_net_sObjectR return rpc_types_h.bool_t;  -- rt_net.h:429
   pragma Import (C, xdr_net_sObjectR, "xdr_net_sObjectR");

   type net_sGetObjectInfo is record
      hdr : aliased net_sMessage;  -- rt_net.h:433
      aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:434
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetObjectInfo);  -- rt_net.h:432

  -- Header  
   subtype net_sGetObjectInfoR_info_array is Interfaces.C.char_array (0 .. 0);
   type net_sGetObjectInfoR is record
      hdr : aliased net_sMessage;  -- rt_net.h:438
      sts : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:439
      aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:440
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:441
      info : aliased net_sGetObjectInfoR_info_array;  -- rt_net.h:442
   end record;
   pragma Convention (C_Pass_By_Copy, net_sGetObjectInfoR);  -- rt_net.h:443

   --  skipped anonymous struct anon_137

  -- Status code  
  -- Copy of requested info  
  -- Size of requested data, same as aref.size, in bytes.   
  -- Data requested.   
   function xdr_net_sGetObjectInfoR return rpc_types_h.bool_t;  -- rt_net.h:445
   pragma Import (C, xdr_net_sGetObjectInfoR, "xdr_net_sGetObjectInfoR");

  -- Set object information.   
  -- Header  
   subtype net_sSetObjectInfo_info_array is Interfaces.C.char_array (0 .. 0);
   type net_sSetObjectInfo is record
      hdr : aliased net_sMessage;  -- rt_net.h:450
      aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:451
      size : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:452
      info : aliased net_sSetObjectInfo_info_array;  -- rt_net.h:453
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSetObjectInfo);  -- rt_net.h:454

   --  skipped anonymous struct anon_138

  -- Data reference  
  -- Size of requested data, same as aref.size, in bytes.   
  -- Data to write (size bytes)  
   function xdr_net_sSetObjectInfo return rpc_types_h.bool_t;  -- rt_net.h:456
   pragma Import (C, xdr_net_sSetObjectInfo, "xdr_net_sSetObjectInfo");

   type net_sSetObjectInfoR is record
      hdr : aliased net_sMessage;  -- rt_net.h:460
      sts : aliased pwr_h.pwr_tUInt32;  -- rt_net.h:461
      aref : aliased pwr_h.pwr_sAttrRef;  -- rt_net.h:462
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSetObjectInfoR);  -- rt_net.h:459

   type net_sSiblings is record
      flink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:467
      newblink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:468
      blink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:469
      newflink : aliased pwr_h.pwr_tObjectIx;  -- rt_net.h:470
   end record;
   pragma Convention (C_Pass_By_Copy, net_sSiblings);  -- rt_net.h:466

   type net_sParent is record
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:475
      soid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:476
   end record;
   pragma Convention (C_Pass_By_Copy, net_sParent);  -- rt_net.h:474

   type net_sNotify is record
      hdr : aliased net_sMessage;  -- rt_net.h:481
      oid : aliased pwr_h.pwr_tObjid;  -- rt_net.h:482
   end record;
   pragma Convention (C_Pass_By_Copy, net_sNotify);  -- rt_net.h:480
